ros2_ws/log/build_2024-10-07_19-40-56/opencv_test_py/stderr.log
  File "/home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py/servo_control.py", line 45
    self.lambda = 1
         ^^^^^^
SyntaxError: invalid syntax

